# fastapi-learn

./: .gitignore  README.md  fastapi.code-workspace  pyproject.toml  requirements.txt  rpc_analysis.md  start.sh  test_response_handling.py
.claude/: settings.local.json
.claude/teams/-------/: config.json
.claude/teams/fastapi-learning-team/: config.json
.github/workflows/: newman-level1.yml
app/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml
app/app/: main.py
app/app/api/: deps.py  main.py
app/app/core/: config.py  db.py  email.py  (+4 more)
app/examples/: 02_response_handling.py  03_unified_response.py  04_error_handling.py  __init__.py
app/nginx/: default.conf
docs/: app_project_architecture_review.md
docs/plans/: 2025-02-18-level4-scheduled-tasks-implementation.md  2025-02-18-scheduled-tasks-design.md
easy_app/: .env.example  .gitignore  README.md  alembic.ini  check_install.py  requirements-dev.txt  requirements.txt  run.py  start.bat  start.sh
easy_app/alembic/: env.py
easy_app/app/: database.py  main.py
easy_app/tests/: conftest.py  test_auth.py  test_todos.py  test_users.py
study/: BEST_PRACTICES.md  README.md
study/level0/: README.md  START_HERE.md  SUMMARY.md  assessment.md  import_asyncio_demo.py
study/level1/: CODE_REVIEW.md  README.md
study/level2/: README.md
study/level3/: README.md
study/level4/: README.md
study/level5/: EXAMPLES_SUMMARY.md  README.md
study/level6/: README.md
study/testing/: README.md  smoke_level1.sh
tests/: test_async_basics.py  test_response_handling.py
(+258 files in other folders)
