[project]
name = "fastapi-level0"
version = "0.1.0"
description = "FastAPI Learning Project - Level 0: Concurrency Fundamentals"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "email-validator>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.33",
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
